public/css/docs.less
main {
    padding-top: 0px;
}

h1, h2, h3, h4, h5, h6 {
    padding-top: 10px;
}

.img-with-label {
    text-align: center;
    margin-bottom: 10px;
}

.prop3col, .prop4col, .prop6col, .prop12col {
    width: 90%;
    position: relative;
    margin-right: auto;
    margin-left: auto;
}

.prop3col:before, .prop4col:before, .prop6col:before, .prop12col:before {
    content: "";
    display: block;
}

.prop3col .content, .prop4col .content, .prop6col .content, .prop12col .content {
    position:  absolute;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
}

.prop3col {
    max-width: 200px;
}
.prop3col:before {
    padding-top: 150%;
}
.prop4col {
    max-width: 250px;
}
.prop4col:before {
    padding-top: 100%;
}

.prop6col {
    max-width: 400px;
}
.prop6col:before {
    padding-top: 75%;
}

.prop12col {
    max-width: 900px;
}
.prop12col:before {
    padding-top: 56%;
}

.img-with-label img {
    margin: 0 auto;
}

.img-with-label > .img-container > div {
    margin: 0 auto;
}

.img-with-label.col-sm-12 .img-container img {
    max-width: 90%;
    height: auto;
}

.label-container label {
    word-wrap: break-word;
    max-width: 100%;
}

#wrapper {
    padding-left: 0;
    -webkit-transition: all 0.5s ease;
    -moz-transition: all 0.5s ease;
    -o-transition: all 0.5s ease;
    transition: all 0.5s ease;
}

#wrapper.toggled {
    padding-left: 250px;
}

#sidebar-wrapper {
    z-index: 1000;
    position: fixed;
    left: 250px;
    width: 0;
    height: 100%;
    margin-left: -250px;
    overflow-y: auto;
    background: rgba(0,0,0,0.2);
    -webkit-transition: all 0.5s ease;
    -moz-transition: all 0.5s ease;
    -o-transition: all 0.5s ease;
    transition: all 0.5s ease;
}

#wrapper.toggled #sidebar-wrapper {
    width: 250px;
}

#page-content-wrapper {
    width: 100%;
    position: absolute;
    padding: 15px;
}

#wrapper.toggled #page-content-wrapper {
    position: absolute;
    margin-right: -250px;
}

/* Sidebar Styles */

.sidebar-nav {
    position: absolute;
    top: 0;
    width: 250px;
    margin: 0;
    padding: 0;
    list-style: none;
}

.sidebar-nav li {
    text-indent: 20px;
    line-height: 40px;
}

.sidebar-nav li a {
    display: block;
    text-decoration: none;
    color: #111;
}

.sidebar-nav li h6 {
    line-height: 40px;
    padding-top: 0px;
}

.sidebar-nav li a:hover {
    cursor: pointer;
    text-decoration: none;
    background: rgba(255,255,255,0.2);
}

.sidebar-nav li a:active,
.sidebar-nav li a:focus {
    text-decoration: none;
}

.sidebar-nav > .sidebar-brand {
    height: 65px;
    font-size: 18px;
    line-height: 60px;
}

.sidebar-nav > .sidebar-brand a {
    color: #999999;
}

.sidebar-nav > .sidebar-brand a:hover {
    color: #fff;
    background: none;
}

@media(min-width:768px) {
    #wrapper {
        padding-left: 250px;
    }

    #wrapper.toggled {
        padding-left: 0;
    }

    #sidebar-wrapper {
        width: 250px;
    }

    #wrapper.toggled #sidebar-wrapper {
        width: 0;
    }

    #page-content-wrapper {
        padding: 20px;
        position: relative;
    }

    #wrapper.toggled #page-content-wrapper {
        position: relative;
        margin-right: 0;
    }
}

kbd {
    border: 1px solid #aaa;
    -moz-border-radius: 0.2em;
    -webkit-border-radius: 0.2em;
    border-radius: 0.2em;
    -moz-box-shadow: 0.1em 0.2em 0.2em #ddd;
    -webkit-box-shadow: 0.1em 0.2em 0.2em #ddd;
    box-shadow: 0.1em 0.2em 0.2em #ddd;
    background-color: #f9f9f9; background-image:
    -moz-linear-gradient(top, #eee, #f9f9f9, #eee);
    background-image: -o-linear-gradient(top, #eee, #f9f9f9, #eee);
    background-image: -webkit-linear-gradient(top, #eee, #f9f9f9, #eee);
    background-image: linear-gradient(to bottom, #eee, #f9f9f9, #eee);
    padding: 0.1em 0.3em;
    font-family: inherit;
    font-size: 0.85em;
    color: black;
}
:target {
  animation: highlight 2s ease;
}
@keyframes highlight {
  0% { background: yellow; }
  100% { background: white; }
}

#page-content-wrapper h2, #page-content-wrapper h4 {
    border-top: 50px solid transparent;
    margin-top: -50px;
    -webkit-background-clip: padding-box;
    -moz-background-clip: padding;
    background-clip: padding-box;
}

.code {
    color: #444;
    font-family: "Source Code Pro",Menlo,Monaco,Consolas,"Courier New",monospace;
    font-size: 90%;
    background-color: #f9f2f4;
}

